--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aaron Ang <awz.ang@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.1",
     "cli-table": "^0.3.1",
     "commander": "^2.18.0",
     "dotenv": "^6.0.0",
